# fapi_TWT

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py
app/data/: posts_dic.py
app/models/: schemas.py
