[project]
name = "fapi-twt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "fastapi[standard]>=0.120.3",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "imagekitio>=4.2.0",
]
